24-07-05    Missing form name added, without which it was impossible to create new articles
21-07-05    Fixed inability to edit org types
20-07-05    Implemented boundary checks for section edit
20-07-05    Removed shop-related sections from mysql data
17-07-05    Fixed sections listed in blocks mgr, 'none' now correctly reads
            'all sections'

IMPROVEMENTS
17-08-05    SGL_String lib updated and improved (Philippe Lhoste)
17-08-05    Updated to latest iso-3166 county list (Philippe Lhoste)
17-08-05    Upgraded to version 2.0 of FCKeditor (Werner Krauss)
17-08-05    Added theme switcher block
17-08-05    Factored module config loading and merging out of SGL_Controller::_getModel
17-08-05    Added almost 200 tests for front controller URL parsing and improved
            reliability
16-08-05    Added ability to customise default theme's stylesheets non-invasively
            (Pierpaolo Toniolo, AJ Tarachanowicz)
04-08-05    Fixed sorting for Users, Roles and Permissions (Rolandas Burbulis)
21-07-05    Database password field in Config changed to 'password' type (Paul Vickers)
17-07-05    All table names are now config driven
15-07-05    Articles now editable in situ
14-07-05    Improved w3c compliance by removing 'name' attribute from some forms
13-07-05    Related documents only displayed next to articles if they exist
13-07-05    Added article summariser method that preserves HTML formatting and
            cleaned up article listing - ArticleViewMgr::summary()
13-07-05    Added 'recent articles' block (Werner Krauss)
10-07-05    Usernames can now be as short as 3 chars (Michael Heuberger)

+-----------------------+
| VERSION: 0.4.4        |
+-----------------------+
BUGFIXES
06-07-05    Fixed incorrect redirect following a 'Reset password' action invoked by
            admin
06-07-05    Updated PEAR xml-rpc lib with security flaw            
05-07-05    Fixed bug where non-alpha chars in config site name would cause parse
            error (STB Land)