@@ -821,15 +821,16 @@ class SGL_Item
      * Gets paginated list of articles.
      *
      * @access  public
-     * @param   int     $dataTypeID template ID of article, ie, new article, weather article, etc.
+     * @param   int     $dataTypeID template ID of article, ie, news article, weather article, etc.
      * @param   string  $queryRange flag to indicate if results limited to specific category
      * @param   int     $catID      optional cat ID to limit results to
      * @param   int     $from       row ID offset for pagination
+     * @param   string  $orderBy    column to sort on
      * @return  array   $aResult    returns array of article objects, pager data, and show page flag
      * @see     retrieveAll()
      */
     function retrievePaginated($catID, $bPublished = false, $dataTypeID = 1, 
-        $queryRange = 'thisCategory', $from = '')
+        $queryRange = 'thisCategory', $from = '', $orderBy = 'last_updated')
     {
         SGL::logMessage(null, PEAR_LOG_DEBUG);
         $conf = & $GLOBALS['_SGL']['CONF'];
@@ -869,7 +870,7 @@ class SGL_Item
             $isPublishedClause . "
             AND     i.category_id = c.category_id
             AND     $roleId NOT IN (COALESCE(c.perms, '-1'))
-            ORDER BY i.last_updated DESC
+            ORDER BY i.$orderBy DESC
             ";
         $dbh = & SGL_DB::singleton();
         $limit = $_SESSION['aPrefs']['resPerPage'];
